--- a/Tests/Editor/GBG.Puppeteer.Tests.Editor.asmdef
+++ b/Tests/Editor/GBG.Puppeteer.Tests.Editor.asmdef
@@ -6,7 +6,9 @@
         "GUID:809ad7290b00eda43b3ad59ee0b0c673",
         "GUID:2c7e3cf849929804bb79aff188db5876"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
